Fixed an issue with winapi-typedefs dependency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Michael Graf"]
 publish = false
 
 [dependencies]
-winapi_typedefs = { git = "https://github.com/bitminded/rs-winapi-typedefs.git" }
+winapi_typedefs = { package="winapi-typedefs", git = "https://github.com/bitminded/rs-winapi-typedefs.git" }
 
 [lib]
 name = "winapi_user32"
